Phaser was updated for phaser-ce 2.11.1
It was decided to use phaser-ce instead phaser3.

It was included http-server too for development process.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/ydiazn/figicat#readme",
   "dependencies": {
-    "phaser": "^3.15.1"
+    "phaser-ce": "^2.11.1"
+  },
+  "devDependencies": {
+    "http-server": "^0.11.1"
   }
 }
