Rollback phaser to v2.4.8
The dichoptic view not works from version 2.4.9
It was not posible find the cause of this issue. It was decided
to use the latest version in which the video game works correctly (2.4.8).

 On branch 1-update-phaser-to-last-phaser-ce-version
 Changes to be committed:
	deleted:    figicat/js/phaser.2.3.0.min.js
	deleted:    figicat/js/phaser.map
	deleted:    figicat/js/phaser.min.js
 Changes not staged for commit:
	modified:   figicat/index.html
	modified:   package-lock.json
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "url": "https://github.com/ydiazn/figicat/issues"
   },
   "homepage": "https://github.com/ydiazn/figicat#readme",
-  "dependencies": {
-    "phaser-ce": "^2.11.1"
-  },
   "devDependencies": {
     "http-server": "^0.11.1"
+  },
+  "dependencies": {
+    "phaser": "^2.4.8"
   }
 }
